# backpack

./: .gitmodules  Cargo.toml
src/: error.rs  file.rs  lib.rs
src/dropin/: config.rs  file.rs  mod.rs  scope.rs
src/pack/: backpack.rs  error.rs  file.rs  guarded_bytes.rs  in_memory.rs  maybe_ref.rs  mod.rs  slice.rs
