[package]
name = "backpack"
version = "0.1.0"
edition = "2021"
description = "packing format; drop-in alternative to rust files, supports in-memory filesystems"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.30"
log = "0.4.14"
rayon = "1.5.1"
elsa = "1.6.0"
lazy_static = "1.4.0"
once_cell = "1.9.0"
parking_lot = "0.11.2"